# Finexa

./: .gitignore  prompt Empty state.txt  prompt.txt
Common/: CMakeLists.txt
Common/Compiler/Apple/: Multiplatform-Conversion.md
Common/Compiler/Apple/FinexaCommonApple.xcodeproj/: project.pbxproj
Common/Compiler/Apple/FinexaCommonApple.xcodeproj/xcuserdata/luis_sonoma.xcuserdatad/xcschemes/: xcschememanagement.plist
Common/Compiler/web/: build_web.ps1  debug_build.ps1  rebuild_web.ps1
Common/Compiler/web/include/: FinexaWebBindings.hpp
Common/Compiler/web/src/: Bindings.cpp
Common/Core/include/: CalculadoraCore.h  Helpers.hpp  Moneda.h  Operacion.h  TasaDeCambio.h
Common/Core/src/: CalculadoraCore.cpp  Helpers.cpp  Moneda.cpp  Operacion.cpp  TasaDeCambio.cpp
Common/Data/include/: ConfigRepository.h  DatabaseInitializer.h  MonedaRepository.h  OperacionRepository.h  TasaRepository.h
Common/Data/src/: ConfigRepository.cpp  DatabaseInitializer.cpp  MonedaRepository.cpp  OperacionRepository.cpp  TasaRepository.cpp
Common/ViewModels/include/: FinexaMainViewModel.h  FinexaViewModels.h  MonedasViewModel.hpp  OperacionesViewModel.h  TasasViewModel.h
Common/ViewModels/src/: FinexaMainViewModel.cpp  MonedasViewModel.cpp  OperacionesViewModel.cpp  TasasViewModel.cpp
Documentacion/: Data.md  Finexa borrador.txt  Flujo de Uso.txt  Requerimientos.md  ViewModelArchitecture.md
Mac/: AppDelegate.swift  FinexaMac-Bridging-Header.h  main.swift
Prompts/: ErroresLogica.txt  FormMonedas.txt  FormOperaciones.md  FormTasas.md  Mejoras UI.txt  Monedas.md  (+3 more)
(+50 files in other folders)
